# CCNotifier

./: .gitattributes  .gitignore  README.en.md  README.md  pyproject.toml
src/ccnotifier/: cli.py
src/ccnotifier/channels/: __init__.py  base.py  telegram.py  webhook.py
src/ccnotifier/core/: __init__.py  config.py  events.py  llm_review.py  notifier.py  rate_limit.py
src/ccnotifier/hooks/: handler.py  installer.py
src/ccnotifier/prompts/: llm_review_system.txt
